src/wasm-lib/kcl/src/parser/snapshots/kcl_lib__parser__parser_impl__snapshot_tests__bd.snap
---
source: kcl/src/parser/parser_impl.rs
expression: actual
---
{
  "start": 0,
  "end": 121,
  "body": [
    {
      "type": "VariableDeclaration",
      "start": 0,
      "end": 121,
      "declarations": [
        {
          "type": "VariableDeclarator",
          "start": 6,
          "end": 121,
          "id": {
            "type": "Identifier",
            "start": 6,
            "end": 7,
            "name": "x"
          },
          "init": {
            "type": "IfExpression",
            "type": "IfExpression",
            "start": 10,
            "end": 121,
            "cond": {
              "type": "Literal",
              "type": "Literal",
              "start": 13,
              "end": 17,
              "value": true,
              "raw": "true"
            },
            "then_val": {
              "start": 32,
              "end": 42,
              "body": [
                {
                  "type": "ExpressionStatement",
                  "start": 32,
                  "end": 33,
                  "expression": {
                    "type": "Literal",
                    "type": "Literal",
                    "start": 32,
                    "end": 33,
                    "value": 3,
                    "raw": "3"
                  }
                }
              ]
            },
            "else_ifs": [
              {
                "type": "ElseIf",
                "start": 44,
                "end": 90,
                "cond": {
                  "type": "CallExpression",
                  "type": "CallExpression",
                  "start": 52,
                  "end": 64,
                  "callee": {
                    "type": "Identifier",
                    "start": 52,
                    "end": 56,
                    "name": "func"
                  },
                  "arguments": [
                    {
                      "type": "Identifier",
                      "type": "Identifier",
                      "start": 57,
                      "end": 63,
                      "name": "radius"
                    }
                  ],
                  "optional": false
                },
                "then_val": {
                  "start": 65,
                  "end": 89,
                  "body": [
                    {
                      "type": "ExpressionStatement",
                      "start": 79,
                      "end": 80,
                      "expression": {
                        "type": "Literal",
                        "type": "Literal",
                        "start": 79,
                        "end": 80,
                        "value": 4,
                        "raw": "4"
                      }
                    }
                  ]
                },
                "digest": null
              }
            ],
            "final_else": {
              "start": 110,
              "end": 120,
              "body": [
                {
                  "type": "ExpressionStatement",
                  "start": 110,
                  "end": 111,
                  "expression": {
                    "type": "Literal",
                    "type": "Literal",
                    "start": 110,
                    "end": 111,
                    "value": 5,
                    "raw": "5"
                  }
                }
              ]
            },
            "digest": null
          }
        }
      ],
      "kind": "const"
    }
  ]
}
