src/wasm-lib/kcl/src/parser/snapshots/kcl_lib__parser__parser_impl__snapshot_tests__bg.snap
---
source: kcl/src/parser/parser_impl.rs
expression: actual
---
{
  "start": 0,
  "end": 5,
  "body": [
    {
      "type": "VariableDeclaration",
      "type": "VariableDeclaration",
      "start": 0,
      "end": 5,
      "declarations": [
        {
          "type": "VariableDeclarator",
          "start": 0,
          "end": 5,
          "id": {
            "type": "Identifier",
            "start": 0,
            "end": 1,
            "name": "x",
            "digest": null
          },
          "init": {
            "type": "Literal",
            "type": "Literal",
            "start": 4,
            "end": 5,
            "value": 4,
            "raw": "4",
            "digest": null
          },
          "digest": null
        }
      ],
      "kind": "const",
      "digest": null
    }
  ],
  "nonCodeMeta": {
    "nonCodeNodes": {},
    "start": [],
    "digest": null
  },
  "digest": null
}
