src/wasm-lib/kcl/src/parser/snapshots/kcl_lib__parser__parser_impl__snapshot_tests__bh.snap
---
source: kcl/src/parser/parser_impl.rs
expression: actual
---
{
  "start": 0,
  "end": 42,
  "body": [
    {
      "type": "VariableDeclaration",
      "type": "VariableDeclaration",
      "start": 0,
      "end": 42,
      "declarations": [
        {
          "type": "VariableDeclarator",
          "start": 6,
          "end": 42,
          "id": {
            "type": "Identifier",
            "start": 6,
            "end": 9,
            "name": "obj"
          },
          "init": {
            "type": "ObjectExpression",
            "start": 12,
            "end": 42,
            "properties": [
              {
                "type": "ObjectProperty",
                "start": 13,
                "end": 30,
                "key": {
                  "type": "Identifier",
                  "start": 13,
                  "end": 19,
                  "name": "center"
                },
                "value": {
                  "type": "ArrayExpression",
                  "start": 22,
                  "end": 30,
                  "elements": [
                    {
                      "type": "Literal",
                      "start": 23,
                      "end": 25,
                      "value": 10,
                      "raw": "10"
                    },
                    {
                      "type": "Literal",
                      "start": 27,
                      "end": 29,
                      "value": 10,
                      "raw": "10"
                    }
                  ]
                }
              },
              {
                "type": "ObjectProperty",
                "start": 32,
                "end": 41,
                "key": {
                  "type": "Identifier",
                  "start": 32,
                  "end": 38,
                  "name": "radius"
                },
                "value": {
                  "type": "Literal",
                  "start": 40,
                  "end": 41,
                  "value": 5,
                  "raw": "5"
                }
              }
            ]
          }
        }
      ],
      "kind": "const"
    }
  ]
}
