src/wasm-lib/kcl/src/parser/snapshots/kcl_lib__parser__parser_impl__snapshot_tests__bk.snap
---
source: kcl/src/parser/parser_impl.rs
assertion_line: 3715
expression: actual
---
{
  "start": 0,
  "end": 22,
  "body": [
    {
      "type": "VariableDeclaration",
      "type": "VariableDeclaration",
      "start": 0,
      "end": 22,
      "declarations": [
        {
          "type": "VariableDeclarator",
          "start": 6,
          "end": 22,
          "id": {
            "type": "Identifier",
            "start": 6,
            "end": 7,
            "name": "x",
            "digest": null
          },
          "init": {
            "type": "BinaryExpression",
            "type": "BinaryExpression",
            "start": 10,
            "end": 22,
            "operator": "|",
            "left": {
              "type": "Literal",
              "type": "Literal",
              "start": 10,
              "end": 15,
              "value": false,
              "raw": "false",
              "digest": null
            },
            "right": {
              "type": "Literal",
              "type": "Literal",
              "start": 18,
              "end": 22,
              "value": true,
              "raw": "true",
              "digest": null
            },
            "digest": null
          },
          "digest": null
        }
      ],
      "kind": "const",
      "digest": null
    }
  ],
  "nonCodeMeta": {
    "nonCodeNodes": {},
    "start": [],
    "digest": null
  },
  "digest": null
}
