src/wasm-lib/kcl/src/parser/snapshots/kcl_lib__parser__parser_impl__snapshot_tests__bm.snap
---
source: kcl/src/parser/parser_impl.rs
assertion_line: 3717
expression: actual
---
{
  "start": 0,
  "end": 5,
  "body": [
    {
      "type": "ExpressionStatement",
      "type": "ExpressionStatement",
      "start": 0,
      "end": 5,
      "expression": {
        "type": "Identifier",
        "type": "Identifier",
        "start": 0,
        "end": 5,
        "name": "truee"
      }
    }
  ]
}
